# SLAM_Pepper

./: .gitignore  README.md
NAOqiManager/: 233.data  CMakeLists.txt  Makefile  README.md  a.dataçå¯æ¬  b.data  data.txt  qiproject.xml
NAOqiManager/naoqipy/: CMakeLists.txt  __init__.py  client_wrapper.cpp  data_wrapper.cpp  wrapper.cpp
NAOqiManager/pyexample/: client.py  test.py
NAOqiManager/src/Client/: QICameraClient.cpp  QICameraClient.h  QIClient.cpp  QIClient.h  QIGazeAnalysisClient.cpp  QIGazeAnalysisClient.h
NAOqiManager/src/Data/: QIData.cpp  QIData.h  QIGazeAnalysisData.cpp  QIGazeAnalysisData.h  QIImage.cpp  QIImage.h
NAOqiManager/src/Device/: QICamera.cpp  QICamera.h  QIDevice.cpp  QIDevice.h  QIGazeAnalysis.cpp  QIGazeAnalysis.h  QIMemory.cpp  QIMemory.h
ORB_SLAM2/: CMakeLists.txt  build.sh
ORB_SLAM2/Examples/Monocular/: mono_kitti.cc
ORB_SLAM2/Examples/Pepper/: RGBD_Pepper.yaml  Stereo_Pepper.yaml  rgbd_pepper.cc  stereo_pepper.cc
ORB_SLAM2/Examples/RGB-D/: NYUv2.yaml  TUM1.yaml  rgbd_nyu.cc  rgbd_tum.cc
ORB_SLAM2/include/: Map.h  PointCloudMapping.h  System.h  Tracking.h
ORB_SLAM2/src/: LocalMapping.cc  LoopClosing.cc  Map.cc  ORBmatcher.cc  PointCloudMapping.cc  System.cc  Tracking.cc
PepperSLAM/: README.md  camera_calib.yml
PepperSLAM/calibration/: calibrate.py  calibrate_stereo.py  split_stereo.py  undistort.py
PepperSLAM/evaluation/: evaluate_ate.py  evaluate_rpe.py
PepperSLAM/stereo/: stereo_match.py  stereo_match_images.py
PepperSLAM/utils/: __init__.py  pointcloud.py  stereo.py  trajectory.py
PepperSLAM/visualization/: export_pointcloud.py  play_video.py  show_disparity.py  show_pointcloud.py  show_trajectory.py
PepperSLAM/visualization/PointCloudView/: CMakeLists.txt  beautify_pointcloud.cpp  config.h  config.yml  merge_pointclouds.cpp  show_pointcloud.cpp
pepperController/pepperController/: controlPepper.html  index.html
segmentation/deeplab/: Makefile  data_generator.py  eval.py  infer.py  infer_nyuv2.py  infer_pepper.py  report.csv  resport.csv  train.py  vis.py
(+9 files in other folders)
